@@ -110,6 +110,7 @@ function CheckForUpdate(showdialog) {
 		 success: function(data) {
 			var urights=data.statuscode;
 			var bDisplayLogout=false;
+			$.FiveMinuteHistoryDays=data["5MinuteHistoryDays"];
 			if (urights!=3) {
 				bDisplayLogout=true;
 			}
